# vvibe

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  update_version.dart
.github/workflows/: build.yml  dev.yml  main.yml  test.yml
android/app/: build.gradle
assets/: light_theme.json
assets/scripts/: install-update.bat  install-update.sh
docs/: remark.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  config.dart  global.dart  init.dart  main.dart  theme.dart
lib/components/: components.dart  custom_appbar.dart  playlist.dart  spinning.dart  video_playlist.dart  videoframe.dart  widgets.dart
lib/models/: channel_epg.dart  ffprobe_info.dart  huya_room_profile.dart  ip_geo.dart  live_danmaku_item.dart  media_info.dart  playlist_info.dart  playlist_item.dart  playlist_text_group.dart  subscription_url.dart  url_sniff_res.dart
lib/router/: app_pages.dart
lib/services/: user.dart  (+3 more)
linux/: CMakeLists.txt  my_application.cc
playlist/: bilibili.m3u  douyu.m3u  douyu代理.m3u  huya-bili-douyu.m3u  huya.m3u  playback.m3u  北京移动-225655.m3u  北京移动PLTV-ua-zte.txt  北京联通udp.m3u  北海市移动ZeiNj5luE.txt  四川电信udp.m3u  广东电信udp.m3u  广东移动iptv-肇庆.txt  广东移动udp hw 广州.m3u  广东联通酒店源.txt  广州电信组播HD.txt  直播源分享.txt  直播源扫描报告1675580156453.txt  直播源扫描揭阳市MCn_bx9Fy.txt
rust/: .gitignore  Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  ffprobe.rs  lib.rs  main.rs  za.rs
rust/src/api/: ffprobe.rs  metadata.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
(+108 files in other folders)
