[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
name = "native"
crate-type = ["cdylib",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
flutter_rust_bridge_codegen="1.66.0"

[dependencies]
xdb={ git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
flutter_rust_bridge = "1.66.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
ffmpeg = {git="https://github.com/meh/rust-ffmpeg",branch="master",features=["serde"]}